<resources>
    <string name="app_name">Deview2015</string>
    <string name="facebook_app_id">1636564173257027</string>

    <!-- Navigation View-->
    <string name="home">Home</string>
    <string name="all_schedule">전체 시간표</string>
    <string name="my_schedule">나의 시간표</string>
    <string name="find_friends">친구 찾기</string>
    <string name="deview_story">#Deview2015</string>
    <string name="setting">설정</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting">SettingActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="aboutus">About us</string>
    <string name="title_activity_detail_session">DetailSessionActivity</string>
</resources>
