<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_all_schedule"
            android:icon="@drawable/ic_insert_invitation_black_24dp"
            android:title="@string/all_schedule" />
        <item
            android:id="@+id/nav_my_schedule"
            android:icon="@drawable/ic_bookmark_black_24dp"
            android:title="@string/my_schedule" />
        <item
            android:id="@+id/nav_find_friends"
            android:icon="@drawable/ic_person_pin_black_24dp"
            android:title="@string/find_friends" />
        <item
            android:id="@+id/nav_deview_story"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/deview_story" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:title="@string/setting" />
    </group>

</menu>
